# Poseidon

./: .gitignore  Dockerfile  Dockerfile_base  MANIFEST.in  README.md  pip.conf  pytest.ini  requirements.txt  setup.cfg  setup.py
Poseidon/: __init__.py
Poseidon/api/: RequestsHelper.py
Poseidon/base/: CommonBase.py  Env.py  Files.py  Frequency.py  IP.py  MQHelper.py  RedisHelper.py  SendMail.py
Poseidon/plugins/: deathtrap_coral.py  light_of_the_mermaid.py
Poseidon/ui/mobile/: __init__.py
Poseidon/ui/pc/: base_page.py  location.py
Poseidon/ui/util/: ElementFinder.py
docs/: create_project.md  directory_explain.md  new_user_guide.md  others.md  reference.md  releaselog.md  use_db_explain.md
poseidon/: __init__.py  test.py
poseidon/api/: Curl_conf.py  PycurlHelper.py  RequestUtils.py  RequestsHelper.py  __init__.py
poseidon/base/: CommonBase.py  HttpResponse.py  IP.py  MQHelper.py  MemcacheHelper.py  MonitorAlert.py  RedisHelper.py  SendMail.py  SqlAlchemySession.py  __init__.py  useragent.py
poseidon/core/: datetime.py  exceptions.py  file.py  output.py  pip_version.py  version.py  version_types.py
poseidon/core/files/: __init__.py  files_exception.py  ini_file.py  utils.py
poseidon/plugins/: deathtrap_coral.py  light_of_the_mermaid.py
poseidon/template/: __init__.py  pytest.ini  requirements.txt
poseidon/template/business/: __init__.py  bus_base.py  bus_base.py_tpl  bus_web.py
poseidon/template/data/: data_android.py  data_base.py  data_base.py_tpl
poseidon/template/testcase/: test_android.py  test_api.py  test_demo1.py_tpl  test_web.py
poseidon/ui/pc/: base_element.py  base_page.py
scripts/: build_pip.sh  test_pip_install.sh  upload_pip.sh
tests/: __init__.py  test_case1.py  test_versions.py
tests/business/: bus_api.py
tests/data/: data_and.py  data_api.py  data_web.py
tests/test_allure/: __init__.py  test_allure1.py  test_allure2.py  test_allure3.py  test_allure4.py  test_allure5.py
tests/test_appium/: __init__.py  test_android.py  test_android_fixture.py  test_android_setup.py  test_demo.py
tests/test_base/: __init__.py  test_send_mail.py
tests/test_core_files/: test_file_is_exists.py  test_path_info.py
tests/test_example/: __init__.py  test_1.py  test_api.py  test_assert.py  test_web.py
(+11 files in other folders)
