[metadata]
name = Poseidon-test
;version = attr: poseidon.__version__
version = 0.0.1
description = 基于Python技术栈的自动化测试框架
long_description = file: README.md, CHANGELOG.rst, LICENSE
keywords = poseidon, pytest, appium, selenium, node
urls = https://github.com/peterkang2001/Poseidon
author = Poseidon Software Foundation
author_email = foundation@poseidon.com
license = MIT
license_file = LICENSE
classifiers =
    Framework :: Pytest
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
python_requires = >=3.6
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    Click>=7.0
;    pytest>=5.3.1
;    pytest-html>=2.0.1
;    pytest-testconfig
;    request
;    pytest-json
;    pytest-selenium
;    SQLAlchemy
;    pyDes
;    pymemcache
;    redis
;    requests_toolbelt

[options.package_data]
* = *.ini, *.txt, *.py_tpl

[options.packages.find]
exclude =
    scripts
    tests

[options.entry_points]
console_scripts =
    po-admin = poseidon.bin.po:cli
;pytest11 =
;    poseidon = poseidon.plugins.deathtrap_coral
;    pc_ui_fixture = poseidon.plugins.light_of_the_mermaid




